Создано с помощью Colaboratory

--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -27,7 +27,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "1bf52f17",
       "metadata": {
         "id": "1bf52f17"
@@ -38,15 +38,19 @@
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
+        "from tqdm import tqdm\n",
         "from sklearn.neighbors import LocalOutlierFactor, KNeighborsClassifier\n",
         "from sklearn.utils import resample\n",
         "from sklearn.metrics import f1_score\n",
-        "from sklearn.model_selection import GridSearchCV, train_test_split\n",
+        "from sklearn.model_selection import GridSearchCV, train_test_split, PredefinedSplit\n",
+        "from sklearn.feature_selection import SelectFromModel\n",
         "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from xgboost import XGBClassifier\n",
         "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.multiclass import OneVsOneClassifier\n",
+        "\n",
         "\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
@@ -60,9 +64,16 @@
       },
       "source": [
         "### Stellar classification Dataset\n",
+        "Heavenly body type classification by its spectral properties<br>\n",
         "Source: https://www.kaggle.com/datasets/fedesoriano/stellar-classification-dataset-sdss17\n",
         "<br>\n",
-        "Preparation pipeline is partially based on: https://www.kaggle.com/code/beyzanks/stellar-classification-98-4-acc-100-auc/notebook "
+        "Preparation pipeline is partially based on: https://www.kaggle.com/code/beyzanks/stellar-classification-98-4-acc-100-auc/notebook<br><br>\n",
+        "**General info:**<br>\n",
+        "*Size:* 51000<br>\n",
+        "*Variables type:* quantitative<br>\n",
+        "*Number of classes:* 3<br>\n",
+        "*Classes balance:* 1.1 / 1 / 1<br>\n",
+        "<br>"
       ]
     },
     {
@@ -283,15 +294,409 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "942c1a5a",
-      "metadata": {
-        "id": "942c1a5a"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "print('kek')"
+        "### Rice type classification Dataset\n",
+        "Determination of rice sort (Jasmine - 1, Gonen - 0) based on its quantitative characteristics (area, axis lenght, etc.).\n",
+        "<br>\n",
+        "Source: https://www.kaggle.com/mssmartypants/rice-type-classification\n",
+        "<br><br>\n",
+        "**General info:**<br>\n",
+        "*Size:* 18000<br>\n",
+        "*Variables type:* quantitative<br>\n",
+        "*Number of classes:* 2<br>\n",
+        "*Classes balance:* 1.2 / 1<br>\n",
+        "<br>\n",
+        "According to kaggle description, this dataset was preproseed before and does not require any additional operations on it.<br><br>\n",
+        "ML models show sufficient preformance with default parameters."
+      ],
+      "metadata": {
+        "id": "FzTXQW10t2DZ"
+      },
+      "id": "FzTXQW10t2DZ"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Pulsars classification Dataset\n",
+        "Pulsars prediction by using neutron star pulse profile<br>\n",
+        "Source: https://www.kaggle.com/colearninglounge/predicting-pulsar-starintermediate<br><br>\n",
+        "**General info:**<br>\n",
+        "*Size:* 18000<br>\n",
+        "*Variables type:* quantitative<br>\n",
+        "*Number of classes:* 2<br>\n",
+        "*Classes balance:* 9.9 / 1<br>"
+      ],
+      "metadata": {
+        "id": "X6tAlyTC1DL5"
+      },
+      "id": "X6tAlyTC1DL5"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# We will define some functions that will automatize data downloading, processing and hyperparameters optimization\n",
+        "\n",
+        "DATASETS = [\n",
+        "    {\n",
+        "        'name': 'Pulsars',\n",
+        "        'features': 'Pulsars_features.csv',\n",
+        "        'labels': 'Pulsars_labels.csv'\n",
+        "    }\n",
+        "]   \n",
+        "\n",
+        "clfs = {\n",
+        "    'DTC': DecisionTreeClassifier,\n",
+        "    'RFC': RandomForestClassifier,\n",
+        "    'LTC': LogisticRegression,\n",
+        "    'XGB': XGBClassifier,\n",
+        "    'KNC': KNeighborsClassifier,\n",
+        "}\n",
+        "\n",
+        "grd_pars = {\n",
+        "    'max_depth': [5, 8, 15, 30],\n",
+        "    'criterion': ['gini', 'entropy'],\n",
+        "    'max_features': [2, 5, 8, 12, 16, 20, 25, None],\n",
+        "    'n_estimators': [20, 40, 60, 80],\n",
+        "    'n_neighbors': [1, 3, 6, 9, 12, 15],\n",
+        "    'learning_rate': [0.1, 0.3, 0.5, 0.7, 1],\n",
+        "    'C': [ 0.5, 1, 5, 10 ],\n",
+        "}\n",
+        "\n",
+        "mdl_pars = [\n",
+        "     ['max_depth', 'criterion'],\n",
+        "     ['max_depth', 'max_features', 'n_estimators'],\n",
+        "     ['C',],\n",
+        "     ['max_depth', 'n_estimators', 'learning_rate'],\n",
+        "     ['n_neighbors',],\n",
+        "]\n"
+      ],
+      "metadata": {
+        "id": "WISO3QQh5IfH"
+      },
+      "id": "WISO3QQh5IfH",
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def non_categorical(dataset):\n",
+        "    features = []\n",
+        "    for col in dataset.columns:\n",
+        "        vals = np.sort(dataset[col].unique())\n",
+        "        if np.any(vals != np.array([0,1])):\n",
+        "            features.append(col)\n",
+        "    return features\n",
+        "\n",
+        "def scale_data(X):\n",
+        "    nc_cols = non_categorical(X)\n",
+        "    sc = StandardScaler()\n",
+        "    X_s = pd.DataFrame(sc.fit_transform(X[nc_cols]), columns=nc_cols)\n",
+        "    return X_s\n",
+        "\n",
+        "def best_params(X, y, clf, grid):\n",
+        "    \n",
+        "    X_train_val, X_test, y_train_val, y_test = train_test_split(X, y, test_size=0.20, random_state=0xC0FFEE)\n",
+        "    X_train, X_val, y_train, y_val = train_test_split(X_train_val, y_train_val, test_size=0.20, random_state=0xC0FFEE)\n",
+        "\n",
+        "    val_fold = 1 - 2*np.isin(X_train_val, X_val).all(axis=1).astype(int)\n",
+        "    ps = PredefinedSplit(val_fold)\n",
+        "    \n",
+        "    grd_clf = GridSearchCV(clf(), grid,\n",
+        "                  scoring = 'f1_micro', cv = ps, n_jobs=-1)\n",
+        "\n",
+        "    grd_clf.fit(X_train_val, y_train_val)\n",
+        "    y_train_pred = grd_clf.best_estimator_.predict(X_train)\n",
+        "\n",
+        "    grd_clf.best_estimator_.fit(X_train, y_train)\n",
+        "    y_test_pred = grd_clf.best_estimator_.predict(X_test)\n",
+        "\n",
+        "    train_score = round(f1_score(y_train, y_train_pred, average='weighted'), 2)\n",
+        "    test_score = round(f1_score(y_test, y_test_pred, average='weighted'), 2)\n",
+        "    \n",
+        "    return train_score, test_score, grd_clf.best_params_\n",
+        "\n",
+        "mdl_vals = {}\n",
+        "\n",
+        "names, models = list(clfs.keys()), list(clfs.values())\n",
+        "for model, clf, params in tqdm(zip(names, models, mdl_pars), total=len(mdl_pars)):\n",
+        "    mdl_vals[model] = {key: [] for key in params}\n",
+        "    for DATA in DATASETS:\n",
+        "        X = pd.read_csv(DATA['features']).drop('Unnamed: 0', axis=1)\n",
+        "        y = pd.read_csv(DATA['labels']).drop('Unnamed: 0', axis=1)\n",
+        "        \n",
+        "        X_s = scale_data(X)\n",
+        "\n",
+        "        grid = { key: grd_pars[key] for key in params }\n",
+        "        train_score, test_score, parameters = best_params(X_s, y, clf, grid)\n",
+        "        \n",
+        "        print(model, DATA['name'], train_score, test_score)\n",
+        "        print(parameters)\n",
+        "        \n",
+        "        for key in parameters:\n",
+        "            mdl_vals[model][key].append(parameters[key])\n",
+        "        \n",
+        "print(mdl_vals)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sMXkIBN7L86a",
+        "outputId": "56f4f5cc-13b7-480d-cda0-7800dd8670eb"
+      },
+      "id": "sMXkIBN7L86a",
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            " 20%|██        | 1/5 [00:00<00:01,  3.43it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "DTC Pulsars 0.98 0.97\n",
+            "{'criterion': 'entropy', 'max_depth': 5}\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r 40%|████      | 2/5 [00:16<00:29,  9.78s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "RFC Pulsars 0.98 0.98\n",
+            "{'max_depth': 5, 'max_features': None, 'n_estimators': 40}\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r 60%|██████    | 3/5 [00:16<00:10,  5.42s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "LTC Pulsars 0.98 0.98\n",
+            "{'C': 10}\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r 80%|████████  | 4/5 [00:23<00:05,  5.90s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "XGB Pulsars 1.0 0.98\n",
+            "{'learning_rate': 0.7, 'max_depth': 15, 'n_estimators': 80}\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 5/5 [00:24<00:00,  4.97s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "KNC Pulsars 0.98 0.97\n",
+            "{'n_neighbors': 3}\n",
+            "{'DTC': {'max_depth': [5], 'criterion': ['entropy']}, 'RFC': {'max_depth': [5], 'max_features': [None], 'n_estimators': [40]}, 'LTC': {'C': [10]}, 'XGB': {'max_depth': [15], 'n_estimators': [80], 'learning_rate': [0.7]}, 'KNC': {'n_neighbors': [3]}}\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Banking classification Dataset\n",
+        "Prediction of client subscription (y/n) for term deposit<br>\n",
+        "Source: https://www.kaggle.com/rashmiranu/banking-dataset-classification<br><br>\n",
+        "**General info:**<br>\n",
+        "*Size:* 33000<br>\n",
+        "*Variables type:* categorical<br>\n",
+        "*Number of classes:* 2<br>\n",
+        "*Classes balance:* 9.7 / 1<br>"
+      ],
+      "metadata": {
+        "id": "Dr9Bqd46aG6P"
+      },
+      "id": "Dr9Bqd46aG6P"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# We will use previously defined functions to estimate the models' parameters\n",
+        "\n",
+        "DATASETS = [\n",
+        "    {\n",
+        "        'name': 'Banking',\n",
+        "        'features': 'bank_data_features.csv',\n",
+        "        'labels': 'bank_data_labels.csv'\n",
+        "    }\n",
+        "]  \n",
+        "\n",
+        "mdl_vals = {}\n",
+        "\n",
+        "names, models = list(clfs.keys()), list(clfs.values())\n",
+        "for model, clf, params in tqdm(zip(names, models, mdl_pars), total=len(mdl_pars)):\n",
+        "    mdl_vals[model] = {key: [] for key in params}\n",
+        "    for DATA in DATASETS:\n",
+        "        X = pd.read_csv(DATA['features'])\n",
+        "        y = pd.read_csv(DATA['labels'])\n",
+        "        \n",
+        "        X_s = scale_data(X)\n",
+        "\n",
+        "        grid = { key: grd_pars[key] for key in params }\n",
+        "        train_score, test_score, parameters = best_params(X_s, y, clf, grid)\n",
+        "        \n",
+        "        print(model, DATA['name'], train_score, test_score)\n",
+        "        print(parameters)\n",
+        "        \n",
+        "        for key in parameters:\n",
+        "            mdl_vals[model][key].append(parameters[key])\n",
+        "        \n",
+        "print(mdl_vals)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sf-BrHdCdIcs",
+        "outputId": "526ed006-f058-4511-b0b1-dd1a29f48a07"
+      },
+      "id": "sf-BrHdCdIcs",
+      "execution_count": 13,
+      "outputs": [
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            " 20%|██        | 1/5 [00:01<00:06,  1.50s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "DTC Banking 0.91 0.89\n",
+            "{'criterion': 'gini', 'max_depth': 8}\n"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\r 40%|████      | 2/5 [00:45<01:19, 26.61s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "RFC Banking 0.91 0.89\n",
+            "{'max_depth': 8, 'max_features': 2, 'n_estimators': 20}\n"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\r 60%|██████    | 3/5 [00:46<00:29, 14.64s/it]"
+          ]
+        },
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "LTC Banking 0.89 0.89\n",
+            "{'C': 0.5}\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r 80%|████████  | 4/5 [02:11<00:42, 42.66s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "XGB Banking 0.91 0.89\n",
+            "{'learning_rate': 0.1, 'max_depth': 5, 'n_estimators': 80}\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 5/5 [02:13<00:00, 26.65s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "KNC Banking 0.9 0.89\n",
+            "{'n_neighbors': 15}\n",
+            "{'DTC': {'max_depth': [8], 'criterion': ['gini']}, 'RFC': {'max_depth': [8], 'max_features': [2], 'n_estimators': [20]}, 'LTC': {'C': [0.5]}, 'XGB': {'max_depth': [5], 'n_estimators': [80], 'learning_rate': [0.1]}, 'KNC': {'n_neighbors': [15]}}\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        }
       ]
     }
   ],
