Создано с помощью Colaboratory

--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -27,14 +27,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 14,
       "id": "1bf52f17",
       "metadata": {
         "id": "1bf52f17"
       },
       "outputs": [],
       "source": [
-        "# Imports (ADD HERE IF STH NEEDED FOR YOU IS STILL ABSENT)\n",
+        "# Imports \n",
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -44,7 +44,7 @@
         "from sklearn.metrics import f1_score\n",
         "from sklearn.model_selection import GridSearchCV, train_test_split, PredefinedSplit\n",
         "from sklearn.feature_selection import SelectFromModel\n",
-        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.preprocessing import StandardScaler, LabelBinarizer\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "from xgboost import XGBClassifier\n",
@@ -375,7 +375,7 @@
         "id": "WISO3QQh5IfH"
       },
       "id": "WISO3QQh5IfH",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -447,7 +447,7 @@
         "outputId": "56f4f5cc-13b7-480d-cda0-7800dd8670eb"
       },
       "id": "sMXkIBN7L86a",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -554,7 +554,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# We will use previously defined functions to estimate the models' parameters\n",
+        "# We will use previously defined functions with extra label binarization to estimate the models' parameters \n",
         "\n",
         "DATASETS = [\n",
         "    {\n",
@@ -573,7 +573,9 @@
         "        X = pd.read_csv(DATA['features'])\n",
         "        y = pd.read_csv(DATA['labels'])\n",
         "        \n",
-        "        X_s = scale_data(X)\n",
+        "        lb = LabelBinarizer()\n",
+        "        X = pd.get_dummies(X)\n",
+        "        y = lb.fit_transform(y)\n",
         "\n",
         "        grid = { key: grd_pars[key] for key in params }\n",
         "        train_score, test_score, parameters = best_params(X_s, y, clf, grid)\n",
@@ -591,69 +593,51 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sf-BrHdCdIcs",
-        "outputId": "526ed006-f058-4511-b0b1-dd1a29f48a07"
+        "outputId": "cb907d9a-434c-489b-9439-36854ffa8cd3"
       },
       "id": "sf-BrHdCdIcs",
-      "execution_count": 13,
+      "execution_count": 15,
       "outputs": [
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            " 20%|██        | 1/5 [00:01<00:06,  1.50s/it]"
+            " 20%|██        | 1/5 [00:01<00:06,  1.51s/it]"
           ]
         },
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "DTC Banking 0.91 0.89\n",
             "{'criterion': 'gini', 'max_depth': 8}\n"
           ]
         },
         {
-          "metadata": {
-            "tags": null
-          },
+          "output_type": "stream",
           "name": "stderr",
-          "output_type": "stream",
           "text": [
-            "\r 40%|████      | 2/5 [00:45<01:19, 26.61s/it]"
+            "\r 40%|████      | 2/5 [00:40<01:10, 23.64s/it]"
           ]
         },
         {
-          "metadata": {
-            "tags": null
-          },
+          "output_type": "stream",
           "name": "stdout",
-          "output_type": "stream",
           "text": [
-            "RFC Banking 0.91 0.89\n",
-            "{'max_depth': 8, 'max_features': 2, 'n_estimators': 20}\n"
+            "RFC Banking 0.95 0.89\n",
+            "{'max_depth': 15, 'max_features': 2, 'n_estimators': 60}\n"
           ]
         },
         {
-          "metadata": {
-            "tags": null
-          },
+          "output_type": "stream",
           "name": "stderr",
-          "output_type": "stream",
           "text": [
-            "\r 60%|██████    | 3/5 [00:46<00:29, 14.64s/it]"
+            "\r 60%|██████    | 3/5 [00:41<00:26, 13.04s/it]"
           ]
         },
         {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "LTC Banking 0.89 0.89\n",
             "{'C': 0.5}\n"
@@ -663,7 +647,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "\r 80%|████████  | 4/5 [02:11<00:42, 42.66s/it]"
+            "\r 80%|████████  | 4/5 [02:10<00:43, 43.24s/it]"
           ]
         },
         {
@@ -678,7 +662,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 5/5 [02:13<00:00, 26.65s/it]"
+            "100%|██████████| 5/5 [02:12<00:00, 26.43s/it]"
           ]
         },
         {
@@ -687,7 +671,7 @@
           "text": [
             "KNC Banking 0.9 0.89\n",
             "{'n_neighbors': 15}\n",
-            "{'DTC': {'max_depth': [8], 'criterion': ['gini']}, 'RFC': {'max_depth': [8], 'max_features': [2], 'n_estimators': [20]}, 'LTC': {'C': [0.5]}, 'XGB': {'max_depth': [5], 'n_estimators': [80], 'learning_rate': [0.1]}, 'KNC': {'n_neighbors': [15]}}\n"
+            "{'DTC': {'max_depth': [8], 'criterion': ['gini']}, 'RFC': {'max_depth': [15], 'max_features': [2], 'n_estimators': [60]}, 'LTC': {'C': [0.5]}, 'XGB': {'max_depth': [5], 'n_estimators': [80], 'learning_rate': [0.1]}, 'KNC': {'n_neighbors': [15]}}\n"
           ]
         },
         {
