--- a/GaussianNoise.ipynb
+++ b/GaussianNoise.ipynb
@@ -9,7 +9,7 @@
     "import numpy as np\n",
     "\n",
     "%matplotlib inline\n",
-    "import matplotlib\n",
+    "import atplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import pandas as pd\n",
